// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - Icon should render Amex svg 1`] = `
<span>
  <Amex />
</span>
`;

exports[`Component - Icon should render Github svg 1`] = `
<span>
  <Github />
</span>
`;

exports[`Component - Icon should render Heart svg 1`] = `
<span>
  <Heart />
</span>
`;

exports[`Component - Icon should render Instagram svg 1`] = `
<span>
  <Instagram />
</span>
`;

exports[`Component - Icon should render Mastercard svg 1`] = `
<span>
  <MasterCard />
</span>
`;

exports[`Component - Icon should render Paypal svg 1`] = `
<span>
  <Paypal />
</span>
`;

exports[`Component - Icon should render Twitter svg 1`] = `
<span>
  <Twitter />
</span>
`;

exports[`Component - Icon should render Visa svg 1`] = `
<span>
  <Visa />
</span>
`;
